# hooligaps-backend

./: .env.example  .gitignore  Dockerfile  alembic.ini  config.py  conftest.py  db_utils.py  decorators.py  filters.py  main.py  models.py  pyproject.toml  schemas.py
__tests__/: test_history_request.py
migrations/: env.py
migrations/versions/: 2026-02-11_init.py  2026-02-11_name_index.py
