[project]
name = "hooligaps-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Anton Lysenkov",email = "soul4code@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.13"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
sqlalchemy = ">=2.0.46,<3.0.0"
fastapi = {version = ">=0.128.7,<0.129.0", extras = ["standard"]}
psycopg2-binary = { version = ">=2.9.11,<3.0.0", markers = "sys_platform == 'darwin'" }
psycopg2 = { version = ">=2.9.11,<3.0.0", markers = "sys_platform != 'darwin'" }
asyncpg = "^0.31.0"
uuid6 = "^2025.0.1"
fastapi-pagination = "^0.15.10"
fastapi-filter = {extras = ["sqlalchemy"], version = "^2.0.1"}
sqlakeyset = "^2.0.1762907931"

[tool.poetry.group.dev.dependencies]
alembic = "^1.18.4"
pre-commit = "^4.5.1"
ruff = "^0.15.0"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
deepdiff = "^8.6.1"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
preview = true
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    #"I001"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",  # unused-import
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
python_files = ["__tests__/test_*.py"]
asyncio_mode = "auto"